# minirogue

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
assets/Cozette/: cozette_hidpi.bdf
src/: components.rs  main.rs  map.rs  mappings.rs  player.rs  resources.rs  setup.rs  startup.rs
src/map/: tile_mapping.rs  tiles.rs
src/mappings/: canaripack.rs  cp437.rs
