[package]
name = "minirogue"
version = "0.1.0"
authors = [ "Peregrine <peregrine@reki.org>" ]
edition = "2021"
description = "Basic roguelike game made to learn Rust, Bevy and ECS by doing."
readme = "README.md"
repository = "https://github.com/peregrine-l/minirogue"
license = "MIT"
keywords = [ "bevy", "ecs", "game", "roguelike", "learning-by-doing" ]
category = [ "games" ]

[features]
default = [ "render" ]
atlas =   []
render =  []

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "ktx2",
    "png",
    "x11",
] }
bracket-lib = "*"
# anyhow = { version = "1.0" }
# env_logger = "0.10"
# ldtk_rust = { version = "0.6" }
# log = "0.4"
# phf = { version = "0.11.2", features = [ "macros" ] }
# regex = "1.5.4"
# serde_json = { version = "1.0" }
# tiled = { version = "0.11.0", default-features = false }
# rand = {version = "0.8.5", features = [ "alloc" ]}
# fmt = "0.1.0"

[dev-dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "png",
    "ktx2",
    "webgl2"
]

[target.'cfg(unix)'.dev-dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "ktx2",
    "png",
    "wayland",
    "x11",
]